--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,4 +1,4 @@
 <figure class="image">
-  <img src="{{ include.url }}" alt="{{ include.alt }}">
+  <img src="{{ include.url | relative_url }}" alt="{{ include.alt }}">
   <figcaption>{{ include.caption }}</figcaption>
 </figure>
