--- a/assets/css/tables.css
+++ b/assets/css/tables.css
@@ -210,50 +210,50 @@ tr:nth-last-child(2):has(.description-window) .product-description .description-
 #attacks-table th:nth-child(3),
 #attacks-table td:nth-child(3) { /* Year */
     width: 60px !important;
-    min-width: 60px;
-    max-width: 80px;
+    min-width: 60px !important;
+    max-width: 80px !important;
 }
 #attacks-table th:nth-child(7),
 #attacks-table td:nth-child(7) { /* Research Type */
     width: 120px !important;
-    min-width: 110px;
-    max-width: 160px;
+    min-width: 110px !important;
+    max-width: 160px !important;
 }
 #attacks-table th:nth-child(8),
 #attacks-table td:nth-child(8) { /* BibTeX */
     width: 90px !important;
-    min-width: 80px;
-    max-width: 120px;
+    min-width: 80px !important;
+    max-width: 120px !important;
 }
 #attacks-table th:nth-child(9),
 #attacks-table td:nth-child(9) { /* Code */
     width: 90px !important;
-    min-width: 80px;
-    max-width: 120px;
+    min-width: 80px !important;
+    max-width: 120px !important;
 }
 #attacks-table th:nth-child(10),
 #attacks-table td:nth-child(10) { /* Links */
     width: 90px !important;
-    min-width: 80px;
-    max-width: 120px;
+    min-width: 80px !important;
+    max-width: 120px !important;
 }
 #attacks-table th:nth-child(4),
 #attacks-table td:nth-child(4) { /* Data Type (Inputs) */
     width: 120px !important;
-    min-width: 110px;
-    max-width: 150px;
+    min-width: 110px !important;
+    max-width: 150px !important;
 }
 #attacks-table th:nth-child(5),
 #attacks-table td:nth-child(5) { /* Type of Data Release (Outputs) */
     width: 150px !important;
-    min-width: 130px;
-    max-width: 190px;
+    min-width: 130px !important;
+    max-width: 190px !important;
 }
 #attacks-table th:nth-child(6),
 #attacks-table td:nth-child(6) { /* Attacker Objectives */
     width: 170px !important;
-    min-width: 150px;
-    max-width: 210px;
+    min-width: 150px !important;
+    max-width: 210px !important;
 }
 
 /* Ensure table container uses full width on privacy attacks page */
