add logo, cleanup some stuff

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,7 @@
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <div class="footer-logo">
-          LOGO
-          <!-- <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="LOGO" class="footer-logo-img"> -->
+          <img src="{{ '/assets/images/opendp-logo.png' | relative_url }}" alt="OpenDP" class="footer-logo-img">
         </div>
         <ul class="contact-list">
           <li class="p-name">
