--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,9 @@
         </svg>
     </div>
     <div class="site-logo">
-        Logo goes here
+        <a href="{{ '/' | relative_url }}" aria-label="Home">
+            <img src="{{ '/assets/images/opendp-logo.png' | relative_url }}" alt="OpenDP" />
+        </a>
     </div>
     <nav class="docs-nav">
         <div class="sidebar-section">
