--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,5 +31,6 @@
   <script src="https://cdn.jsdelivr.net/npm/vega@6.1.2"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@6.2.0"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@7.0.2"></script>
+  <link rel="icon" href="{{ '/assets/images/favicon.png' | relative_url }}" type="image/png">
 
 </head>
